// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should match snapshot > Request "/" should match snapshot > /@body 1`] = `""`;

exports[`Should match snapshot > Request "/" should match snapshot > /@headers 1`] = `
{
  "location": "/examples",
  "x-powered-by": "@web-widget/web-router",
}
`;

exports[`Should match snapshot > Request "/" should match snapshot > /@status 1`] = `307`;

exports[`Should match snapshot > Request "/" should match snapshot > /@statusText 1`] = `"Temporary Redirect"`;

exports[`Should match snapshot > Request "/examples" should match snapshot > /examples@body 1`] = `
"<!doctype html><html lang="en"><head> <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title >Error</title><style >web-widget{display:contents}</style><style >
        body { 
          margin: 0; 
          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
          background: #fff;
          min-height: 100vh;
          min-height: 100dvh;
          display: flex;
          flex-direction: column;
          align-items: center;
          padding: 60px 40px;
          box-sizing: border-box;
        }
        .error-card { 
          max-width: 600px; width: 100%; text-align: center; padding: 0 20px;
          flex: 0 0 auto;
          margin-top: auto;
          margin-bottom: auto;
        }
        .error-status { font-size: 72px; font-weight: 700; color: #333; margin-bottom: 16px; }
        .error-title { font-size: 48px; font-weight: 600; color: #555; margin-bottom: 20px; }
        .error-desc { font-size: 18px; color: #777; margin-bottom: 40px; }
        .error-debug { margin-top: 40px; text-align: left; }
        .error-code-block { margin-top: 20px; background: #f8f8f8; border-radius: 4px; overflow: hidden; }
        .error-code-header { background: #f0f0f0; padding: 12px 16px; font-size: 14px; font-weight: 500; color: #333; }
        .error-code-content { 
          margin: 0; font-size: 13px; padding: 16px; background: #f8f8f8;
          font-family: ui-monospace, SFMono-Regular, Consolas, monospace;
          color: #333; white-space: pre-wrap; overflow-x: auto; max-width: 100%;
          overflow-wrap: break-word;
        }
        .copy-error-btn { 
          margin: 20px auto 0; background: none; border: none; font-size: 12px; 
          color: #999; cursor: pointer; display: block; text-decoration: underline;
        }
        .copy-error-btn:hover { color: #666; }
        .copy-success { color: #22c55e !important; }
        @media (max-width: 640px) {
          body { padding: 20px 15px; min-height: 100vh; }
          .error-status { font-size: 56px; }
          .error-title { font-size: 36px; }
          .error-desc { font-size: 16px; }
        }
        @media (max-width: 480px) {
          body { padding: 15px 10px; min-height: 100vh; }
          .error-status { font-size: 48px; }
          .error-title { font-size: 28px; }
          .error-desc { font-size: 14px; }
        }
      </style><script type="module" src="/@vite/client"></script><script type="module" src="/entry.client.ts"></script><script type="server:context">{"pathname":"/examples","params":{}}</script> </head><body> <div class="error-card">
    <div class="error-status">500</div>
    <div class="error-title">Server Error</div>
    <div class="error-desc">Something went wrong on our end.</div>

    <div class="error-debug"> <div class="error-code-block"><div class="error-code-header">Error Message</div><pre class="error-code-content">Counter is not defined</pre></div> <div class="error-code-block"><div class="error-code-header">Stack Trace</div><pre class="error-code-content">ReferenceError: Counter is not defined
    at Page (/Users/tangbin/Git/web-widget/examples/html/routes/examples/index@route.html.ts:26:646)
    at Object.render (/Users/tangbin/Git/web-widget/packages/html/src/adapter.ts:46:33)
    at ModuleRuntime.#renderToResponse (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:382:43)
    at Context.html (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:469:21)
    at GET (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:508:24)
    at /Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:128:12
    at cachedHandler (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:213:20)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)
    at poweredBy (/Users/tangbin/Git/web-widget/examples/html/entry.server.ts:98:16)</pre></div>  <button class="copy-error-btn" onclick=" const stackTrace = \`ReferenceError: Counter is not defined
    at Page (/Users/tangbin/Git/web-widget/examples/html/routes/examples/index@route.html.ts:26:646)
    at Object.render (/Users/tangbin/Git/web-widget/packages/html/src/adapter.ts:46:33)
    at ModuleRuntime.#renderToResponse (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:382:43)
    at Context.html (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:469:21)
    at GET (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:508:24)
    at /Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:128:12
    at cachedHandler (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:213:20)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)
    at poweredBy (/Users/tangbin/Git/web-widget/examples/html/entry.server.ts:98:16)\`;
      const causeInfo = \`&quot;No cause information&quot;\`;
      
      const fullErrorText = \`# Error Report

## Basic Information
- **Status Code**: 500
- **Error Message**: Counter is not defined
- **Timestamp**: 2026-07-12T17:00:16.633Z
- **URL**: \${window.location.href}
- **User Agent**: \${navigator.userAgent}

## Stack Trace
\\\`\\\`\\\`
\${stackTrace}
\\\`\\\`\\\`

## Cause Information
\\\`\\\`\\\`json
\${causeInfo}
\\\`\\\`\\\`

---
*Generated by Web Widget*\`;
      
      navigator.clipboard.writeText(fullErrorText).then(() => {
        this.textContent = '✓ Copied';
        this.classList.add('copy-success');
        setTimeout(() => {
          this.textContent = 'Copy error info';
          this.classList.remove('copy-success');
        }, 2000);
      }).catch(() => {
        this.textContent = 'Copy failed';
        setTimeout(() => {
          this.textContent = 'Copy error info';
        }, 2000);
      });
    ">
    Copy error info
  </button> </div>
  </div> </body></html>"
`;

exports[`Should match snapshot > Request "/examples" should match snapshot > /examples@headers 1`] = `
{
  "content-type": "text/html; charset=utf-8",
}
`;

exports[`Should match snapshot > Request "/examples" should match snapshot > /examples@status 1`] = `500`;

exports[`Should match snapshot > Request "/examples" should match snapshot > /examples@statusText 1`] = `"Internal Server Error"`;

exports[`Should match snapshot > Request "/examples/_404" should match snapshot > /examples/_404@body 1`] = `
"<!doctype html><html lang="en"><head> <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title >Error</title><style >web-widget{display:contents}</style><style >
        body { 
          margin: 0; 
          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
          background: #fff;
          min-height: 100vh;
          min-height: 100dvh;
          display: flex;
          flex-direction: column;
          align-items: center;
          padding: 60px 40px;
          box-sizing: border-box;
        }
        .error-card { 
          max-width: 600px; width: 100%; text-align: center; padding: 0 20px;
          flex: 0 0 auto;
          margin-top: auto;
          margin-bottom: auto;
        }
        .error-status { font-size: 72px; font-weight: 700; color: #333; margin-bottom: 16px; }
        .error-title { font-size: 48px; font-weight: 600; color: #555; margin-bottom: 20px; }
        .error-desc { font-size: 18px; color: #777; margin-bottom: 40px; }
        .error-debug { margin-top: 40px; text-align: left; }
        .error-code-block { margin-top: 20px; background: #f8f8f8; border-radius: 4px; overflow: hidden; }
        .error-code-header { background: #f0f0f0; padding: 12px 16px; font-size: 14px; font-weight: 500; color: #333; }
        .error-code-content { 
          margin: 0; font-size: 13px; padding: 16px; background: #f8f8f8;
          font-family: ui-monospace, SFMono-Regular, Consolas, monospace;
          color: #333; white-space: pre-wrap; overflow-x: auto; max-width: 100%;
          overflow-wrap: break-word;
        }
        .copy-error-btn { 
          margin: 20px auto 0; background: none; border: none; font-size: 12px; 
          color: #999; cursor: pointer; display: block; text-decoration: underline;
        }
        .copy-error-btn:hover { color: #666; }
        .copy-success { color: #22c55e !important; }
        @media (max-width: 640px) {
          body { padding: 20px 15px; min-height: 100vh; }
          .error-status { font-size: 56px; }
          .error-title { font-size: 36px; }
          .error-desc { font-size: 16px; }
        }
        @media (max-width: 480px) {
          body { padding: 15px 10px; min-height: 100vh; }
          .error-status { font-size: 48px; }
          .error-title { font-size: 28px; }
          .error-desc { font-size: 14px; }
        }
      </style><script type="module" src="/@vite/client"></script><script type="module" src="/entry.client.ts"></script><script type="server:context">{"pathname":"/examples/:notFound*","params":{"notFound":"_404"}}</script> </head><body> <div class="error-card">
    <div class="error-status">500</div>
    <div class="error-title">Server Error</div>
    <div class="error-desc">Something went wrong on our end.</div>

    <div class="error-debug"> <div class="error-code-block"><div class="error-code-header">Error Message</div><pre class="error-code-content">navigation is not defined</pre></div> <div class="error-code-block"><div class="error-code-header">Stack Trace</div><pre class="error-code-content">ReferenceError: navigation is not defined
    at baseLayout (/Users/tangbin/Git/web-widget/examples/html/routes/examples/(components)/baseLayout.html.ts:16:476)
    at Page (/Users/tangbin/Git/web-widget/examples/html/routes/examples/[...notFound]@route.html.ts:19:45)
    at Object.render (/Users/tangbin/Git/web-widget/packages/html/src/adapter.ts:46:33)
    at ModuleRuntime.#renderToResponse (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:382:43)
    at Context.html (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:469:21)
    at GET (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:508:24)
    at /Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:128:12
    at cachedHandler (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:213:20)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)</pre></div>  <button class="copy-error-btn" onclick=" const stackTrace = \`ReferenceError: navigation is not defined
    at baseLayout (/Users/tangbin/Git/web-widget/examples/html/routes/examples/(components)/baseLayout.html.ts:16:476)
    at Page (/Users/tangbin/Git/web-widget/examples/html/routes/examples/[...notFound]@route.html.ts:19:45)
    at Object.render (/Users/tangbin/Git/web-widget/packages/html/src/adapter.ts:46:33)
    at ModuleRuntime.#renderToResponse (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:382:43)
    at Context.html (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:469:21)
    at GET (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:508:24)
    at /Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:128:12
    at cachedHandler (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:213:20)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)\`;
      const causeInfo = \`&quot;No cause information&quot;\`;
      
      const fullErrorText = \`# Error Report

## Basic Information
- **Status Code**: 500
- **Error Message**: navigation is not defined
- **Timestamp**: 2026-07-12T17:00:16.682Z
- **URL**: \${window.location.href}
- **User Agent**: \${navigator.userAgent}

## Stack Trace
\\\`\\\`\\\`
\${stackTrace}
\\\`\\\`\\\`

## Cause Information
\\\`\\\`\\\`json
\${causeInfo}
\\\`\\\`\\\`

---
*Generated by Web Widget*\`;
      
      navigator.clipboard.writeText(fullErrorText).then(() => {
        this.textContent = '✓ Copied';
        this.classList.add('copy-success');
        setTimeout(() => {
          this.textContent = 'Copy error info';
          this.classList.remove('copy-success');
        }, 2000);
      }).catch(() => {
        this.textContent = 'Copy failed';
        setTimeout(() => {
          this.textContent = 'Copy error info';
        }, 2000);
      });
    ">
    Copy error info
  </button> </div>
  </div> </body></html>"
`;

exports[`Should match snapshot > Request "/examples/_404" should match snapshot > /examples/_404@headers 1`] = `
{
  "content-type": "text/html; charset=utf-8",
}
`;

exports[`Should match snapshot > Request "/examples/_404" should match snapshot > /examples/_404@status 1`] = `500`;

exports[`Should match snapshot > Request "/examples/_404" should match snapshot > /examples/_404@statusText 1`] = `"Internal Server Error"`;

exports[`Should match snapshot > Request "/examples/action" should match snapshot > /examples/action@body 1`] = `
"<!doctype html><html lang="en"><head> <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title >Error</title><style >web-widget{display:contents}</style><style >
        body { 
          margin: 0; 
          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
          background: #fff;
          min-height: 100vh;
          min-height: 100dvh;
          display: flex;
          flex-direction: column;
          align-items: center;
          padding: 60px 40px;
          box-sizing: border-box;
        }
        .error-card { 
          max-width: 600px; width: 100%; text-align: center; padding: 0 20px;
          flex: 0 0 auto;
          margin-top: auto;
          margin-bottom: auto;
        }
        .error-status { font-size: 72px; font-weight: 700; color: #333; margin-bottom: 16px; }
        .error-title { font-size: 48px; font-weight: 600; color: #555; margin-bottom: 20px; }
        .error-desc { font-size: 18px; color: #777; margin-bottom: 40px; }
        .error-debug { margin-top: 40px; text-align: left; }
        .error-code-block { margin-top: 20px; background: #f8f8f8; border-radius: 4px; overflow: hidden; }
        .error-code-header { background: #f0f0f0; padding: 12px 16px; font-size: 14px; font-weight: 500; color: #333; }
        .error-code-content { 
          margin: 0; font-size: 13px; padding: 16px; background: #f8f8f8;
          font-family: ui-monospace, SFMono-Regular, Consolas, monospace;
          color: #333; white-space: pre-wrap; overflow-x: auto; max-width: 100%;
          overflow-wrap: break-word;
        }
        .copy-error-btn { 
          margin: 20px auto 0; background: none; border: none; font-size: 12px; 
          color: #999; cursor: pointer; display: block; text-decoration: underline;
        }
        .copy-error-btn:hover { color: #666; }
        .copy-success { color: #22c55e !important; }
        @media (max-width: 640px) {
          body { padding: 20px 15px; min-height: 100vh; }
          .error-status { font-size: 56px; }
          .error-title { font-size: 36px; }
          .error-desc { font-size: 16px; }
        }
        @media (max-width: 480px) {
          body { padding: 15px 10px; min-height: 100vh; }
          .error-status { font-size: 48px; }
          .error-title { font-size: 28px; }
          .error-desc { font-size: 14px; }
        }
      </style><script type="module" src="/@vite/client"></script><script type="module" src="/entry.client.ts"></script><script type="server:context">{"pathname":"/examples/action","params":{}}</script> </head><body> <div class="error-card">
    <div class="error-status">500</div>
    <div class="error-title">Server Error</div>
    <div class="error-desc">Something went wrong on our end.</div>

    <div class="error-debug"> <div class="error-code-block"><div class="error-code-header">Error Message</div><pre class="error-code-content">echo is not defined</pre></div> <div class="error-code-block"><div class="error-code-header">Stack Trace</div><pre class="error-code-content">ReferenceError: echo is not defined
    at Page (/Users/tangbin/Git/web-widget/examples/html/routes/examples/action/index@route.html.ts:24:1905)
    at Object.render (/Users/tangbin/Git/web-widget/packages/html/src/adapter.ts:46:33)
    at ModuleRuntime.#renderToResponse (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:382:43)
    at Context.html (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:469:21)
    at GET (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:508:24)
    at /Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:128:12
    at cachedHandler (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:213:20)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)
    at poweredBy (/Users/tangbin/Git/web-widget/examples/html/entry.server.ts:98:16)</pre></div>  <button class="copy-error-btn" onclick=" const stackTrace = \`ReferenceError: echo is not defined
    at Page (/Users/tangbin/Git/web-widget/examples/html/routes/examples/action/index@route.html.ts:24:1905)
    at Object.render (/Users/tangbin/Git/web-widget/packages/html/src/adapter.ts:46:33)
    at ModuleRuntime.#renderToResponse (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:382:43)
    at Context.html (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:469:21)
    at GET (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:508:24)
    at /Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:128:12
    at cachedHandler (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:213:20)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)
    at poweredBy (/Users/tangbin/Git/web-widget/examples/html/entry.server.ts:98:16)\`;
      const causeInfo = \`&quot;No cause information&quot;\`;
      
      const fullErrorText = \`# Error Report

## Basic Information
- **Status Code**: 500
- **Error Message**: echo is not defined
- **Timestamp**: 2026-07-12T17:00:16.644Z
- **URL**: \${window.location.href}
- **User Agent**: \${navigator.userAgent}

## Stack Trace
\\\`\\\`\\\`
\${stackTrace}
\\\`\\\`\\\`

## Cause Information
\\\`\\\`\\\`json
\${causeInfo}
\\\`\\\`\\\`

---
*Generated by Web Widget*\`;
      
      navigator.clipboard.writeText(fullErrorText).then(() => {
        this.textContent = '✓ Copied';
        this.classList.add('copy-success');
        setTimeout(() => {
          this.textContent = 'Copy error info';
          this.classList.remove('copy-success');
        }, 2000);
      }).catch(() => {
        this.textContent = 'Copy failed';
        setTimeout(() => {
          this.textContent = 'Copy error info';
        }, 2000);
      });
    ">
    Copy error info
  </button> </div>
  </div> </body></html>"
`;

exports[`Should match snapshot > Request "/examples/action" should match snapshot > /examples/action@headers 1`] = `
{
  "content-type": "text/html; charset=utf-8",
}
`;

exports[`Should match snapshot > Request "/examples/action" should match snapshot > /examples/action@status 1`] = `500`;

exports[`Should match snapshot > Request "/examples/action" should match snapshot > /examples/action@statusText 1`] = `"Internal Server Error"`;

exports[`Should match snapshot > Request "/examples/api/hello" should match snapshot > /examples/api/hello@body 1`] = `"[{"title":"console.log('hello world')","url":"#id0"},{"title":"echo \\"hello world\\"","url":"#id1"},{"title":"print('hello world')","url":"#id2"},{"title":"println!(\\"Hello, World\\")","url":"#id3"}]"`;

exports[`Should match snapshot > Request "/examples/api/hello" should match snapshot > /examples/api/hello@headers 1`] = `
{
  "content-type": "application/json",
  "x-powered-by": "@web-widget/web-router",
}
`;

exports[`Should match snapshot > Request "/examples/api/hello" should match snapshot > /examples/api/hello@status 1`] = `200`;

exports[`Should match snapshot > Request "/examples/api/hello" should match snapshot > /examples/api/hello@statusText 1`] = `""`;

exports[`Should match snapshot > Request "/examples/fetch" should match snapshot > /examples/fetch@body 1`] = `
"<!doctype html><html lang="en"><head> <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title >Error</title><style >web-widget{display:contents}</style><style >
        body { 
          margin: 0; 
          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
          background: #fff;
          min-height: 100vh;
          min-height: 100dvh;
          display: flex;
          flex-direction: column;
          align-items: center;
          padding: 60px 40px;
          box-sizing: border-box;
        }
        .error-card { 
          max-width: 600px; width: 100%; text-align: center; padding: 0 20px;
          flex: 0 0 auto;
          margin-top: auto;
          margin-bottom: auto;
        }
        .error-status { font-size: 72px; font-weight: 700; color: #333; margin-bottom: 16px; }
        .error-title { font-size: 48px; font-weight: 600; color: #555; margin-bottom: 20px; }
        .error-desc { font-size: 18px; color: #777; margin-bottom: 40px; }
        .error-debug { margin-top: 40px; text-align: left; }
        .error-code-block { margin-top: 20px; background: #f8f8f8; border-radius: 4px; overflow: hidden; }
        .error-code-header { background: #f0f0f0; padding: 12px 16px; font-size: 14px; font-weight: 500; color: #333; }
        .error-code-content { 
          margin: 0; font-size: 13px; padding: 16px; background: #f8f8f8;
          font-family: ui-monospace, SFMono-Regular, Consolas, monospace;
          color: #333; white-space: pre-wrap; overflow-x: auto; max-width: 100%;
          overflow-wrap: break-word;
        }
        .copy-error-btn { 
          margin: 20px auto 0; background: none; border: none; font-size: 12px; 
          color: #999; cursor: pointer; display: block; text-decoration: underline;
        }
        .copy-error-btn:hover { color: #666; }
        .copy-success { color: #22c55e !important; }
        @media (max-width: 640px) {
          body { padding: 20px 15px; min-height: 100vh; }
          .error-status { font-size: 56px; }
          .error-title { font-size: 36px; }
          .error-desc { font-size: 16px; }
        }
        @media (max-width: 480px) {
          body { padding: 15px 10px; min-height: 100vh; }
          .error-status { font-size: 48px; }
          .error-title { font-size: 28px; }
          .error-desc { font-size: 14px; }
        }
      </style><script type="module" src="/@vite/client"></script><script type="module" src="/entry.client.ts"></script><script type="server:context">{"pathname":"/examples/fetch","params":{}}</script> </head><body> <div class="error-card">
    <div class="error-status">500</div>
    <div class="error-title">Server Error</div>
    <div class="error-desc">Something went wrong on our end.</div>

    <div class="error-debug"> <div class="error-code-block"><div class="error-code-header">Error Message</div><pre class="error-code-content">navigation is not defined</pre></div> <div class="error-code-block"><div class="error-code-header">Stack Trace</div><pre class="error-code-content">ReferenceError: navigation is not defined
    at baseLayout (/Users/tangbin/Git/web-widget/examples/html/routes/examples/(components)/baseLayout.html.ts:16:476)
    at Page (/Users/tangbin/Git/web-widget/examples/html/routes/examples/fetch/index@route.html.ts:28:45)
    at Object.render (/Users/tangbin/Git/web-widget/packages/html/src/adapter.ts:46:33)
    at ModuleRuntime.#renderToResponse (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:382:43)
    at Context.html (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:469:21)
    at GET (/Users/tangbin/Git/web-widget/examples/html/routes/examples/fetch/index@route.html.ts:30:1)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)
    at poweredBy (/Users/tangbin/Git/web-widget/examples/html/entry.server.ts:98:16)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)</pre></div>  <button class="copy-error-btn" onclick=" const stackTrace = \`ReferenceError: navigation is not defined
    at baseLayout (/Users/tangbin/Git/web-widget/examples/html/routes/examples/(components)/baseLayout.html.ts:16:476)
    at Page (/Users/tangbin/Git/web-widget/examples/html/routes/examples/fetch/index@route.html.ts:28:45)
    at Object.render (/Users/tangbin/Git/web-widget/packages/html/src/adapter.ts:46:33)
    at ModuleRuntime.#renderToResponse (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:382:43)
    at Context.html (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:469:21)
    at GET (/Users/tangbin/Git/web-widget/examples/html/routes/examples/fetch/index@route.html.ts:30:1)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)
    at poweredBy (/Users/tangbin/Git/web-widget/examples/html/entry.server.ts:98:16)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)\`;
      const causeInfo = \`&quot;No cause information&quot;\`;
      
      const fullErrorText = \`# Error Report

## Basic Information
- **Status Code**: 500
- **Error Message**: navigation is not defined
- **Timestamp**: 2026-07-12T17:00:16.653Z
- **URL**: \${window.location.href}
- **User Agent**: \${navigator.userAgent}

## Stack Trace
\\\`\\\`\\\`
\${stackTrace}
\\\`\\\`\\\`

## Cause Information
\\\`\\\`\\\`json
\${causeInfo}
\\\`\\\`\\\`

---
*Generated by Web Widget*\`;
      
      navigator.clipboard.writeText(fullErrorText).then(() => {
        this.textContent = '✓ Copied';
        this.classList.add('copy-success');
        setTimeout(() => {
          this.textContent = 'Copy error info';
          this.classList.remove('copy-success');
        }, 2000);
      }).catch(() => {
        this.textContent = 'Copy failed';
        setTimeout(() => {
          this.textContent = 'Copy error info';
        }, 2000);
      });
    ">
    Copy error info
  </button> </div>
  </div> </body></html>"
`;

exports[`Should match snapshot > Request "/examples/fetch" should match snapshot > /examples/fetch@headers 1`] = `
{
  "content-type": "text/html; charset=utf-8",
}
`;

exports[`Should match snapshot > Request "/examples/fetch" should match snapshot > /examples/fetch@status 1`] = `500`;

exports[`Should match snapshot > Request "/examples/fetch" should match snapshot > /examples/fetch@statusText 1`] = `"Internal Server Error"`;

exports[`Should match snapshot > Request "/examples/frameworks" should match snapshot > /examples/frameworks@body 1`] = `
"<!doctype html><html lang="en"><head> <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title >Error</title><style >web-widget{display:contents}</style><style >
        body { 
          margin: 0; 
          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
          background: #fff;
          min-height: 100vh;
          min-height: 100dvh;
          display: flex;
          flex-direction: column;
          align-items: center;
          padding: 60px 40px;
          box-sizing: border-box;
        }
        .error-card { 
          max-width: 600px; width: 100%; text-align: center; padding: 0 20px;
          flex: 0 0 auto;
          margin-top: auto;
          margin-bottom: auto;
        }
        .error-status { font-size: 72px; font-weight: 700; color: #333; margin-bottom: 16px; }
        .error-title { font-size: 48px; font-weight: 600; color: #555; margin-bottom: 20px; }
        .error-desc { font-size: 18px; color: #777; margin-bottom: 40px; }
        .error-debug { margin-top: 40px; text-align: left; }
        .error-code-block { margin-top: 20px; background: #f8f8f8; border-radius: 4px; overflow: hidden; }
        .error-code-header { background: #f0f0f0; padding: 12px 16px; font-size: 14px; font-weight: 500; color: #333; }
        .error-code-content { 
          margin: 0; font-size: 13px; padding: 16px; background: #f8f8f8;
          font-family: ui-monospace, SFMono-Regular, Consolas, monospace;
          color: #333; white-space: pre-wrap; overflow-x: auto; max-width: 100%;
          overflow-wrap: break-word;
        }
        .copy-error-btn { 
          margin: 20px auto 0; background: none; border: none; font-size: 12px; 
          color: #999; cursor: pointer; display: block; text-decoration: underline;
        }
        .copy-error-btn:hover { color: #666; }
        .copy-success { color: #22c55e !important; }
        @media (max-width: 640px) {
          body { padding: 20px 15px; min-height: 100vh; }
          .error-status { font-size: 56px; }
          .error-title { font-size: 36px; }
          .error-desc { font-size: 16px; }
        }
        @media (max-width: 480px) {
          body { padding: 15px 10px; min-height: 100vh; }
          .error-status { font-size: 48px; }
          .error-title { font-size: 28px; }
          .error-desc { font-size: 14px; }
        }
      </style><script type="module" src="/@vite/client"></script><script type="module" src="/entry.client.ts"></script><script type="server:context">{"pathname":"/examples/frameworks","params":{}}</script> </head><body> <div class="error-card">
    <div class="error-status">500</div>
    <div class="error-title">Server Error</div>
    <div class="error-desc">Something went wrong on our end.</div>

    <div class="error-debug"> <div class="error-code-block"><div class="error-code-header">Error Message</div><pre class="error-code-content">reactWidget is not defined</pre></div> <div class="error-code-block"><div class="error-code-header">Stack Trace</div><pre class="error-code-content">ReferenceError: reactWidget is not defined
    at Page (/Users/tangbin/Git/web-widget/examples/html/routes/examples/frameworks/index@route.html.ts:88:3)
    at Object.render (/Users/tangbin/Git/web-widget/packages/html/src/adapter.ts:46:33)
    at ModuleRuntime.#renderToResponse (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:382:43)
    at Context.html (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:469:21)
    at GET (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:508:24)
    at /Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:128:12
    at cachedHandler (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:213:20)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)
    at poweredBy (/Users/tangbin/Git/web-widget/examples/html/entry.server.ts:98:16)</pre></div>  <button class="copy-error-btn" onclick=" const stackTrace = \`ReferenceError: reactWidget is not defined
    at Page (/Users/tangbin/Git/web-widget/examples/html/routes/examples/frameworks/index@route.html.ts:88:3)
    at Object.render (/Users/tangbin/Git/web-widget/packages/html/src/adapter.ts:46:33)
    at ModuleRuntime.#renderToResponse (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:382:43)
    at Context.html (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:469:21)
    at GET (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:508:24)
    at /Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:128:12
    at cachedHandler (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:213:20)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)
    at poweredBy (/Users/tangbin/Git/web-widget/examples/html/entry.server.ts:98:16)\`;
      const causeInfo = \`&quot;No cause information&quot;\`;
      
      const fullErrorText = \`# Error Report

## Basic Information
- **Status Code**: 500
- **Error Message**: reactWidget is not defined
- **Timestamp**: 2026-07-12T17:00:16.661Z
- **URL**: \${window.location.href}
- **User Agent**: \${navigator.userAgent}

## Stack Trace
\\\`\\\`\\\`
\${stackTrace}
\\\`\\\`\\\`

## Cause Information
\\\`\\\`\\\`json
\${causeInfo}
\\\`\\\`\\\`

---
*Generated by Web Widget*\`;
      
      navigator.clipboard.writeText(fullErrorText).then(() => {
        this.textContent = '✓ Copied';
        this.classList.add('copy-success');
        setTimeout(() => {
          this.textContent = 'Copy error info';
          this.classList.remove('copy-success');
        }, 2000);
      }).catch(() => {
        this.textContent = 'Copy failed';
        setTimeout(() => {
          this.textContent = 'Copy error info';
        }, 2000);
      });
    ">
    Copy error info
  </button> </div>
  </div> </body></html>"
`;

exports[`Should match snapshot > Request "/examples/frameworks" should match snapshot > /examples/frameworks@headers 1`] = `
{
  "content-type": "text/html; charset=utf-8",
}
`;

exports[`Should match snapshot > Request "/examples/frameworks" should match snapshot > /examples/frameworks@status 1`] = `500`;

exports[`Should match snapshot > Request "/examples/frameworks" should match snapshot > /examples/frameworks@statusText 1`] = `"Internal Server Error"`;

exports[`Should match snapshot > Request "/examples/middleware" should match snapshot > /examples/middleware@body 1`] = `
"<!doctype html><html lang="en"><head> <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title >Error</title><style >web-widget{display:contents}</style><style >
        body { 
          margin: 0; 
          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
          background: #fff;
          min-height: 100vh;
          min-height: 100dvh;
          display: flex;
          flex-direction: column;
          align-items: center;
          padding: 60px 40px;
          box-sizing: border-box;
        }
        .error-card { 
          max-width: 600px; width: 100%; text-align: center; padding: 0 20px;
          flex: 0 0 auto;
          margin-top: auto;
          margin-bottom: auto;
        }
        .error-status { font-size: 72px; font-weight: 700; color: #333; margin-bottom: 16px; }
        .error-title { font-size: 48px; font-weight: 600; color: #555; margin-bottom: 20px; }
        .error-desc { font-size: 18px; color: #777; margin-bottom: 40px; }
        .error-debug { margin-top: 40px; text-align: left; }
        .error-code-block { margin-top: 20px; background: #f8f8f8; border-radius: 4px; overflow: hidden; }
        .error-code-header { background: #f0f0f0; padding: 12px 16px; font-size: 14px; font-weight: 500; color: #333; }
        .error-code-content { 
          margin: 0; font-size: 13px; padding: 16px; background: #f8f8f8;
          font-family: ui-monospace, SFMono-Regular, Consolas, monospace;
          color: #333; white-space: pre-wrap; overflow-x: auto; max-width: 100%;
          overflow-wrap: break-word;
        }
        .copy-error-btn { 
          margin: 20px auto 0; background: none; border: none; font-size: 12px; 
          color: #999; cursor: pointer; display: block; text-decoration: underline;
        }
        .copy-error-btn:hover { color: #666; }
        .copy-success { color: #22c55e !important; }
        @media (max-width: 640px) {
          body { padding: 20px 15px; min-height: 100vh; }
          .error-status { font-size: 56px; }
          .error-title { font-size: 36px; }
          .error-desc { font-size: 16px; }
        }
        @media (max-width: 480px) {
          body { padding: 15px 10px; min-height: 100vh; }
          .error-status { font-size: 48px; }
          .error-title { font-size: 28px; }
          .error-desc { font-size: 14px; }
        }
      </style><script type="module" src="/@vite/client"></script><script type="module" src="/entry.client.ts"></script><script type="server:context">{"pathname":"/examples/middleware","params":{}}</script> </head><body> <div class="error-card">
    <div class="error-status">500</div>
    <div class="error-title">Server Error</div>
    <div class="error-desc">Something went wrong on our end.</div>

    <div class="error-debug"> <div class="error-code-block"><div class="error-code-header">Error Message</div><pre class="error-code-content">navigation is not defined</pre></div> <div class="error-code-block"><div class="error-code-header">Stack Trace</div><pre class="error-code-content">ReferenceError: navigation is not defined
    at baseLayout (/Users/tangbin/Git/web-widget/examples/html/routes/examples/(components)/baseLayout.html.ts:16:476)
    at Page (/Users/tangbin/Git/web-widget/examples/html/routes/examples/middleware/index@route.html.ts:17:45)
    at Object.render (/Users/tangbin/Git/web-widget/packages/html/src/adapter.ts:46:33)
    at ModuleRuntime.#renderToResponse (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:382:43)
    at Context.html (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:469:21)
    at GET (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:508:24)
    at /Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:128:12
    at cachedHandler (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:213:20)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)</pre></div>  <button class="copy-error-btn" onclick=" const stackTrace = \`ReferenceError: navigation is not defined
    at baseLayout (/Users/tangbin/Git/web-widget/examples/html/routes/examples/(components)/baseLayout.html.ts:16:476)
    at Page (/Users/tangbin/Git/web-widget/examples/html/routes/examples/middleware/index@route.html.ts:17:45)
    at Object.render (/Users/tangbin/Git/web-widget/packages/html/src/adapter.ts:46:33)
    at ModuleRuntime.#renderToResponse (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:382:43)
    at Context.html (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:469:21)
    at GET (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:508:24)
    at /Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:128:12
    at cachedHandler (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:213:20)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)\`;
      const causeInfo = \`&quot;No cause information&quot;\`;
      
      const fullErrorText = \`# Error Report

## Basic Information
- **Status Code**: 500
- **Error Message**: navigation is not defined
- **Timestamp**: 2026-07-12T17:00:16.667Z
- **URL**: \${window.location.href}
- **User Agent**: \${navigator.userAgent}

## Stack Trace
\\\`\\\`\\\`
\${stackTrace}
\\\`\\\`\\\`

## Cause Information
\\\`\\\`\\\`json
\${causeInfo}
\\\`\\\`\\\`

---
*Generated by Web Widget*\`;
      
      navigator.clipboard.writeText(fullErrorText).then(() => {
        this.textContent = '✓ Copied';
        this.classList.add('copy-success');
        setTimeout(() => {
          this.textContent = 'Copy error info';
          this.classList.remove('copy-success');
        }, 2000);
      }).catch(() => {
        this.textContent = 'Copy failed';
        setTimeout(() => {
          this.textContent = 'Copy error info';
        }, 2000);
      });
    ">
    Copy error info
  </button> </div>
  </div> </body></html>"
`;

exports[`Should match snapshot > Request "/examples/middleware" should match snapshot > /examples/middleware@headers 1`] = `
{
  "content-type": "text/html; charset=utf-8",
}
`;

exports[`Should match snapshot > Request "/examples/middleware" should match snapshot > /examples/middleware@status 1`] = `500`;

exports[`Should match snapshot > Request "/examples/middleware" should match snapshot > /examples/middleware@statusText 1`] = `"Internal Server Error"`;

exports[`Should match snapshot > Request "/examples/static" should match snapshot > /examples/static@body 1`] = `
"<!doctype html><html lang="en"><head> <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title >Error</title><style >web-widget{display:contents}</style><style >
        body { 
          margin: 0; 
          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
          background: #fff;
          min-height: 100vh;
          min-height: 100dvh;
          display: flex;
          flex-direction: column;
          align-items: center;
          padding: 60px 40px;
          box-sizing: border-box;
        }
        .error-card { 
          max-width: 600px; width: 100%; text-align: center; padding: 0 20px;
          flex: 0 0 auto;
          margin-top: auto;
          margin-bottom: auto;
        }
        .error-status { font-size: 72px; font-weight: 700; color: #333; margin-bottom: 16px; }
        .error-title { font-size: 48px; font-weight: 600; color: #555; margin-bottom: 20px; }
        .error-desc { font-size: 18px; color: #777; margin-bottom: 40px; }
        .error-debug { margin-top: 40px; text-align: left; }
        .error-code-block { margin-top: 20px; background: #f8f8f8; border-radius: 4px; overflow: hidden; }
        .error-code-header { background: #f0f0f0; padding: 12px 16px; font-size: 14px; font-weight: 500; color: #333; }
        .error-code-content { 
          margin: 0; font-size: 13px; padding: 16px; background: #f8f8f8;
          font-family: ui-monospace, SFMono-Regular, Consolas, monospace;
          color: #333; white-space: pre-wrap; overflow-x: auto; max-width: 100%;
          overflow-wrap: break-word;
        }
        .copy-error-btn { 
          margin: 20px auto 0; background: none; border: none; font-size: 12px; 
          color: #999; cursor: pointer; display: block; text-decoration: underline;
        }
        .copy-error-btn:hover { color: #666; }
        .copy-success { color: #22c55e !important; }
        @media (max-width: 640px) {
          body { padding: 20px 15px; min-height: 100vh; }
          .error-status { font-size: 56px; }
          .error-title { font-size: 36px; }
          .error-desc { font-size: 16px; }
        }
        @media (max-width: 480px) {
          body { padding: 15px 10px; min-height: 100vh; }
          .error-status { font-size: 48px; }
          .error-title { font-size: 28px; }
          .error-desc { font-size: 14px; }
        }
      </style><script type="module" src="/@vite/client"></script><script type="module" src="/entry.client.ts"></script><script type="server:context">{"pathname":"/examples/static","params":{}}</script> </head><body> <div class="error-card">
    <div class="error-status">500</div>
    <div class="error-title">Server Error</div>
    <div class="error-desc">Something went wrong on our end.</div>

    <div class="error-debug"> <div class="error-code-block"><div class="error-code-header">Error Message</div><pre class="error-code-content">navigation is not defined</pre></div> <div class="error-code-block"><div class="error-code-header">Stack Trace</div><pre class="error-code-content">ReferenceError: navigation is not defined
    at baseLayout (/Users/tangbin/Git/web-widget/examples/html/routes/examples/(components)/baseLayout.html.ts:16:476)
    at Page (/Users/tangbin/Git/web-widget/examples/html/routes/examples/static/index@route.html.ts:19:45)
    at Object.render (/Users/tangbin/Git/web-widget/packages/html/src/adapter.ts:46:33)
    at ModuleRuntime.#renderToResponse (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:382:43)
    at Context.html (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:469:21)
    at GET (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:508:24)
    at /Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:128:12
    at cachedHandler (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:213:20)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)</pre></div>  <button class="copy-error-btn" onclick=" const stackTrace = \`ReferenceError: navigation is not defined
    at baseLayout (/Users/tangbin/Git/web-widget/examples/html/routes/examples/(components)/baseLayout.html.ts:16:476)
    at Page (/Users/tangbin/Git/web-widget/examples/html/routes/examples/static/index@route.html.ts:19:45)
    at Object.render (/Users/tangbin/Git/web-widget/packages/html/src/adapter.ts:46:33)
    at ModuleRuntime.#renderToResponse (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:382:43)
    at Context.html (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:469:21)
    at GET (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:508:24)
    at /Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:128:12
    at cachedHandler (/Users/tangbin/Git/web-widget/packages/web-router/src/module.ts:213:20)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)
    at dispatch (/Users/tangbin/Git/web-widget/packages/helpers/src/module/compose.ts:57:16)\`;
      const causeInfo = \`&quot;No cause information&quot;\`;
      
      const fullErrorText = \`# Error Report

## Basic Information
- **Status Code**: 500
- **Error Message**: navigation is not defined
- **Timestamp**: 2026-07-12T17:00:16.672Z
- **URL**: \${window.location.href}
- **User Agent**: \${navigator.userAgent}

## Stack Trace
\\\`\\\`\\\`
\${stackTrace}
\\\`\\\`\\\`

## Cause Information
\\\`\\\`\\\`json
\${causeInfo}
\\\`\\\`\\\`

---
*Generated by Web Widget*\`;
      
      navigator.clipboard.writeText(fullErrorText).then(() => {
        this.textContent = '✓ Copied';
        this.classList.add('copy-success');
        setTimeout(() => {
          this.textContent = 'Copy error info';
          this.classList.remove('copy-success');
        }, 2000);
      }).catch(() => {
        this.textContent = 'Copy failed';
        setTimeout(() => {
          this.textContent = 'Copy error info';
        }, 2000);
      });
    ">
    Copy error info
  </button> </div>
  </div> </body></html>"
`;

exports[`Should match snapshot > Request "/examples/static" should match snapshot > /examples/static@headers 1`] = `
{
  "content-type": "text/html; charset=utf-8",
}
`;

exports[`Should match snapshot > Request "/examples/static" should match snapshot > /examples/static@status 1`] = `500`;

exports[`Should match snapshot > Request "/examples/static" should match snapshot > /examples/static@statusText 1`] = `"Internal Server Error"`;
